Add images; Edit sections

--- a/Sources/Abstract.tex
+++ b/Sources/Abstract.tex
@@ -4,13 +4,13 @@
 %
 \noindent
 %
-As agricultural inputs, such as water and fertilizer, become more scarce in the future, a higher level of precision will be required when utilizing these resources. Remote sensing is a field that has aimed to understand data from radiation reflected from vegetation.  Remote determination of water content
-of this vegetation remains a long term goal.  Furthermore as agricultural production has also shifted to indoor
-growing environments, the use of indoor sensors at smaller scales could be useful for determining the
+As agricultural inputs, such as water and fertilizer, become scarce a higher level of precision will be required when utilizing these resources. Remote sensing is a field that has aimed to understand data from radiation reflected from vegetation.  Determination of water content with remote sensing techniques
+of vegetation remains a long term goal.  Furthermore as agricultural production has shifted to indoor
+growing environments, the use of indoor sensors at smaller scales could prove to be useful for determining the
 physiological status of crops. In this study the use of texture, polarization and pseudo-spectral features captured in
 acquired images are shown to be useful for the successful classification of
 three different deciduous tree species common to the northeastern part of the
 United States using a linear support vector classifier. The observations
-are extended to the intra-class variance of the derived features and are shown
+are extended to the intra-class variance of the derived features which are shown
 to be useful for the prediction of the relative water content of individual leaves when
-analyzed using support vector regression.
+analyzed using linear regression.
