--- a/Sources/Background/Nature_of_Light/Jones_Vectors.tex
+++ b/Sources/Background/Nature_of_Light/Jones_Vectors.tex
@@ -3,7 +3,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
     %need subsub section on Jones
     % need subsub section on Devices
-For the special case of fully polarized EM waves, DOP = 1, the polarization of the beam can be described by a 2x 1 complex vector known as a Jones vector.  The Jones vector relies on the fact that the polarization state of a beam depends only on its relative $X$ and $Y$ intensities, as well as the phase delay between each respective component.
+For the special case of fully polarized EM waves, DOP = 1, the polarization of the beam can be described by a 2x1 complex vector known as a Jones vector.  The Jones vector relies on the fact that the polarization state of a beam depends only on its relative $x$ and $y$ intensities, as well as the phase delay between each respective component.
 
 Converting the equation for the electric component of the EM wave into a phasor makes it easy to see the parameters that determine the beam's polarization.  A phasor represents a sinusoidal wave with a constant frequency.  The Jones vectors can be formulated from this representation as
 %
@@ -161,7 +161,7 @@ substituting in for previous values of b and d give
     d = ctan(\psi) = sin^2\psi
 \end{align}
 %
-The general form of a linear polarizer with transmission axis angle ? from the X axis is
+The general form of a linear polarizer with transmission axis angle $\psi$ from the X axis is
 %
 \begin{align}
     P(\psi) =
