--- a/Sources/Background/Nature_of_Light/Nature_of_Light.tex
+++ b/Sources/Background/Nature_of_Light/Nature_of_Light.tex
@@ -21,14 +21,14 @@ The electrical portion of EM waves, and the only portion considered here, can be
     E_y (t)=E_{0y} cos( \theta+\delta_y )
 \end{align}
 %
-where $ \theta = \delta t-kz $ is the wave propagator that determines the frequency and direction of propagation for the wave.$ \delta_y and \delta_x $ represent the phase delay for each component of the wave.
+where $ \theta = \omega t-kz $ is the wave propagator that determines the frequency and direction of propagation for the wave. $\delta_y$ and $\delta_x $ represent the phase delay for each component of the wave.
 
-When more than one sine wave is considered, as in the case of EM waves, an overall phase delay between the them is considered and represented as $ \tau=\delta_y-\delta_x $.
+When more than one sine wave is considered, as in the case of EM waves, an overall phase delay between the them is considered and represented as $ \delta=\delta_y-\delta_x $. $E_{0x}$ and $E_{0y}$ represent the amplitudes of the sinusoidal wave in the $x$ and $y$ direction.
 
 Light can also be viewed as packets of energy known as photons.  The energy of photons is related to its frequency $v$ and a constant, known as Planck’s constant $h$ \cite{ecophysiology}.
 %
 \begin{align}
-	h=6.62e-34 [m^2 kg/s]\\
+	h=6.62\times10^{-34} [m^2 kg/s]\\
 	E=hv [Joules]
 \end{align}
 %
