--- a/Sources/Background/Remote_Sensing/VI_Spectral_Responses.tex
+++ b/Sources/Background/Remote_Sensing/VI_Spectral_Responses.tex
@@ -1,7 +1,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Vegetation Indices and Spectral Responses}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-Spectral response patterns in remote sensing have been shown to useful [many sources] for determining the health of land vegetation.  The reflection and scattering of light off vegetation using different spectral bands of incident light, allows for the classification of land objects and vegetation health.  The detector response to these processes are known as spectral responses.  Spectral responses are quantitative measures that change with the condition of the vegetation under inspection.  As plants become stressed, as in the case of water deficiency or drought, their physiological makeup changes.  A variety of different factors can affect the exact spectral response of an object \cite{remotesensing}.
+Spectral response patterns in remote sensing have been shown to useful [TODO many sources] for determining the health of land vegetation.  The reflection and scattering of light off vegetation using different spectral bands of incident light, allows for the classification of land objects and vegetation health.  The detector response to these processes are known as spectral responses.  Spectral responses are quantitative measures that change with the condition of the vegetation under inspection.  As plants become stressed, as in the case of water deficiency or drought, their physiological makeup changes.  A variety of different factors can affect the exact spectral response of an object \cite{remotesensing}.
 
 Vegetative Indices (VI) are ratios between different spectral responses for the purpose of determining the condition and health of plants.  Various combinations of frequencies have been combined to form standard VI’s utilizing the visible spectrum and the infrared spectrum. In its most basic form a vegetation index is defined by,
 %
