--- a/Sources/Feature_Extraction/Feature_Extraction.tex
+++ b/Sources/Feature_Extraction/Feature_Extraction.tex
@@ -107,8 +107,7 @@ In addition to performing a polarization based analysis on each color channel of
 
         return np.array(texture)
 \end{lstlisting}
-
-Data was exported to csv files for future processing and analysis in Support Vector Machine classification and linear regression.
+The metrics derived from the GLCM matrix can be plotted in various scatterplots as demonstrated in the Results chapter and Appendix. Data was exported to csv files for future processing and analysis in Support Vector Machine classification and linear regression.
 
 [perhaps here talk about the larger picture of data acquisition -> feature extranction and then analyisis][perhaps show tools used, but def extend this discussion]
 [perhaps show raw histogram images]
