--- a/Thesis.bib
+++ b/Thesis.bib
@@ -29,7 +29,7 @@
 }
 %4
 @article{haralick,
-    author = "Albert Einstein",
+    author = "Haralick, R.M.",
     title = "{Textural Features for Image Classification}",
     journal = "IEEE Transactions on Systems, Man, and Cybernetics",
     volume = "SMC",
@@ -336,4 +336,34 @@
     title = "Leaf Structure and Pigments",
     url  = "http://w3.marietta.edu/~biol/introlab/Leaves%20and%20Pigments.pdf",
     keywords = "plant, pigments"
+}
+%36
+@online{spieellipse,
+    author = "Collett, E.",
+    title = "Field Guide to Polarization",
+    url  = "https://spie.org/publications/fg05_p07-09_polarization_ellipse?SSO=1",
+    keywords = "polarization ellipse"
+}
+%37
+@article{nicodemus,
+    author = "Nicodemus, F.E.",
+    title = "{Geometrical Considerations and Nomenclature for Reflectance }",
+    year = "1977",
+    keywords = "BRDF"
+}
+%38
+@article{sparrow,
+    author = "Meister, G. and Wiemker, R. and Monno, R.",
+    title = "{Investigation on the Torrance-Sparrow specular BRDF model}",
+    journal = "Geoscience and Remote Sensing Symposium Proceedings",
+    year = "1998",
+    DOI = "http://dx.doi.org/10.1109/IGARSS.1998.703752",
+    keywords = "surface, brdf"
+}
+%39
+@article{brdfoverview,
+    author = "Montes, R. and Ureña, C.",
+    title = "{An Overview of BRDF Models}",
+    year = "2012",
+    keywords = "surface, brdf"
 }
