--- a/Sources/Background/Nature_of_Light/Reflection_Transmission.tex
+++ b/Sources/Background/Nature_of_Light/Reflection_Transmission.tex
@@ -20,7 +20,13 @@ Note that part of the transmitted spectra may be absorbed, although this is not 
 
 Two main scenarios are often presented when demonstrating the principles which guide the reflected and transmitted rays; when the incident electromagnetic wave is polarized perpendicular to the plane of incidence, and when the wave is polarized parallel to it.  The perpendicular polarized wave is often denoted S or TE for transverse electric, while the parallel scenario is often denoted P or TM for transverse magnetic.
 
-%Figure 4-Fresnel reflection and transmission. reproduced here without permission%
+\begin{figure}[!htb]
+    \begin{center}
+        \makebox[\textwidth]{\includegraphics[scale=0.6]{/Sources/Background/Nature_of_Light/fresnel-reflect-trans.png}}
+    \end{center}
+    \caption{Fresnel Reflection and Transmittance}
+    \label{fig:polarization}
+\end{figure}
 
 The intensity of the reflected waves for the S and P polarized case are
 %
@@ -53,13 +59,12 @@ The Mueller matrix formulation for reflection and transmission reduces to the fo
         S_{3r}
     \end{bmatrix}
     =
-    \frac{1}{2}(\frac{tan(\theta_{-})}{sin(\theta_{+})})^2 \\
-    \small
+    \frac{1}{2}(\frac{tan(\theta_{-})}{sin(\theta_{+})})^2
     \begin{bmatrix}
-       cos^2(\theta_{-}) + cos^2(\theta_{+}) & cos^2(\theta_{-}) - cos^2(\theta_{+}) & 0 & 0 \\
-        cos^2(\theta_{-}) - cos^2(\theta_{+}) & cos^2(\theta_{-}) + cos^2(\theta_{+}) & 0 & 0 \\
-        0 & 0 & -2cos(\theta_{-})cos(\theta_{+}) & 0 \\
-        0 & 0 & 0 & -2cos(\theta_{-})cos(\theta_{+})
+       p_S^2 + p_P^2 & p_S^2 - p_P^2 & 0 & 0 \\
+        p_S^2 - p_P^2 & p_S^2 + p_P^2 & 0 & 0 \\
+        0 & 0 & 2p_Sp_P & 0 \\
+        0 & 0 & 0 & 2p_Sp_P
     \end{bmatrix}
     \begin{bmatrix}
         S_0 \\
@@ -70,8 +75,13 @@ The Mueller matrix formulation for reflection and transmission reduces to the fo
     \end{split}
 \end{align}
 %
-where $\theta_{\pm}=\theta_i \pm \theta_r$. This is identical to the form of a linear diattenuator or polarizer.
-[TODO check these equations for accuracy]
+\begin{align}
+    p_S = cos^2(\theta_{-}) \\
+    p_P = cos^2(\theta_{+})
+\end{align}
+and $\theta_{\pm}=\theta_i \pm \theta_r$.
+This is identical to the form of a linear diattenuator or polarizer from Equation.
+[TODO fill in prev eq number]
 For incident unpolarized light the equation simplifies to
 %
 \begin{align}
@@ -92,6 +102,6 @@ For incident unpolarized light the equation simplifies to
     S_0
 \end{align}
 %
-Therefore, for ideal reflective surfaces, at the Brewster angle, light will be completely polarized perpendicular to the plane of incidence.
+Therefore, for ideal reflective surfaces, at the Brewster angle, light will be completely polarized perpendicular to the plane of incidence. It should be noted that the case of incident unpolarized light onto the target material, gives the polarizance vector of the Mueller Matrix as described in Section xx.
 
 Imperfect, non-ideal surfaces have the ability to reflect, transmit and absorb incident electromagnetic radiation.  The outcome of these interactions are related to the physiological makeup of the material, as well as its surface topology.  Multiple scattering mechanisms can be at work within a system, and numerous models have been attempted to balance the tradeoffs between practical realizability for measurements and accurate representation of scattering mechanisms [\cite{priest}, \cite{pbrdf}].  Only some of these models attempt to deal with the polarization of the incident, reflected, and transmitted beams.
