--- a/Sources/Background/Plant_Physiology/Plant_Physiology.tex
+++ b/Sources/Background/Plant_Physiology/Plant_Physiology.tex
@@ -7,13 +7,20 @@ Water is also an essential agricultural input needed for plant photosynthesis an
 
 The layers of a deciduous leaf contain protection mechanisms, transport systems, and reaction centers for the process of photosynthesis.
 
-[insert image of plant layers]
+%[CHECK insert image of plant layers]
+\begin{figure}[!htb]
+    \begin{center}
+        \makebox[\textwidth]{\includegraphics[scale=0.5]{/Sources/Background/Plant_Physiology/leaf-v3.png}}
+    \end{center}
+    \caption{Major Structures of a Leaf}
+    \label{fig:polarization}
+\end{figure}
 
 The cuticle wax layer, upper epidermis, and mesophyll layer are the first layers of light interaction on the adaxial surface of the leaf.
 
 The cuticle wax layer provides “the most critical adaptive trait for survival … the ability to retain water in increasingly dehydrating habitats” \cite{cuticle}.  It is the first line of defense for plants and acts as a barrier between water transpiration.
 
-The mesophyll layers contain chloroplasts that convert light energy into chemical energy and consists of two parts. The palisade mesophyll is made up of elongated, organized, compact cells that contain a large number of the chloroplasts.  The spongy mesophyll is irregular in shape and has a large amount of space between its cells to facilitate air and gas exchange [find source].
+The mesophyll layers contain chloroplasts that convert light energy into chemical energy and consists of two parts. The palisade mesophyll is made up of elongated, organized, compact cells that contain a large number of the chloroplasts.  The spongy mesophyll is irregular in shape and has a large amount of space between its cells to facilitate air and gas exchange [TODO find source].
 
 The upper epidermis consists of very few chloroplasts, and allows most of the light to pass through to the mesophyll layers.
 
